# pyLIS

./: CMakeLists.txt  Readme.md
lis/: __init__.py
src/: wrapper.i
tests/: test1.py
